...
                   didFinishLaunchingWithOptions launchOptions: [UIApplicationLaunchOptionsKey: Any]?) -> Bool {
    let appearance = UINavigationBar.appearance()
    appearance.barTintColor = MMColor.blue
    appearance.tintColor = MMColor.black
    window = UIWindow(frame: UIScreen.main.bounds)
    let transactionViewController = UINavigationController(rootViewController: TransactionViewController())
    transactionViewController.tabBarItem = UITabBarItem(title: "收支記錄",
                                                        image: UIImage(named: "dollar-black"),
                                                        selectedImage: UIImage(named: "dollar-black"))
    let statsViewController = UINavigationController(rootViewController: StatsViewController())
    statsViewController.tabBarItem = UITabBarItem(title: "統計圖表",
                                                  image: UIImage(named: "pie-chart-black"),
                                                  selectedImage: UIImage(named: "pie-chart-black"))
...
